--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postcss": "^8.4.31"
   },
   "scripts": {
-    "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
+    "start": "set BROWSER=none&& set WDS_SOCKET_PORT=0&& vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "cross-env": "^7.0.3",
     "jsdom": "^22.1.0",
     "vite": "^6.3.2",
     "vitest": "^3.1.2"
