--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
-  "name": "codespaces-react",
-  "version": "0.1.0",
+  "name": "travel-journal",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "web-vitals": "^3.1.0"
-  },
-  "overrides": {
-    "@svgr/webpack": "^8.0.1",
-    "@adobe/css-tools": "^4.3.1",
-    "postcss": "^8.4.31"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
-<<<<<<< HEAD
-    "start": "set BROWSER=none&& set WDS_SOCKET_PORT=0&& vite --port 3000",
-=======
-    "start": "cross-env BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
->>>>>>> 205b25131e82060b1760b217876a5708829d9965
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,12 +30,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.1.1",
-    "cross-env": "^7.0.3",
-    "jsdom": "^22.1.0",
-    "vite": "^6.3.2",
-    "vitest": "^3.1.2"
   }
 }
